@@ -451,6 +451,9 @@ Library
 - Bug #1222790: in SimpleXMLRPCServer, set the reuse-address and close-on-exec 
   flags on the HTTP listening socket.
 
+- Bug #792570: SimpleXMLRPCServer had problems if the request grew too large.
+  Fixed by reading the HTTP body in chunks instead of one big socket.read().
+
 - Bug #1110478: Revert os.environ.update to do putenv again.
 
 - Bug #1103844: fix distutils.install.dump_dirs() with negated options.
